2012-02-09  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: [refactoring] take _showShortEvents out of timeline calculator
        https://bugs.webkit.org/show_bug.cgi?id=78230

        Reviewed by Pavel Feldman.

        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype._toggleFilterButtonClicked):
        (WebInspector.TimelinePanel.prototype._refresh):
        (WebInspector.TimelinePanel.prototype._addToRecordsWindow):

2012-02-08  Dan Vrátil  <dvratil@redhat.com>, Milan Crha <mcrha@redhat.com>

        [GTK] Embedded GtkWidgets are not drawn
        https://bugs.webkit.org/show_bug.cgi?id=63451

        Remove widget from it's parent container when GtkPluginWidget is destroyed.
        Remove paint() method because real expose even is used for drawing child widgets now.

        Reviewed by Martin Robinson.

        * platform/gtk/GtkPluginWidget.cpp:
        (WebCore::GtkPluginWidget::~GtkPluginWidget):
        (WebCore):
        * platform/gtk/GtkPluginWidget.h:
        (GtkPluginWidget):

2012-02-09  Arun Patole  <arun.patole@motorola.com>

        Setting media element 'src' attribute to "" should trigger load
        https://bugs.webkit.org/show_bug.cgi?id=47907

        Reviewed by Eric Carlson.

        Test: media/video-src-empty.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::attributeChanged):Trigger a load, as long as the 'src' attribute is present.

2012-02-09  Jonathan Backer  <backer@chromium.org>

        [chromium] Add setNeedsRedraw to WebWidget
        https://bugs.webkit.org/show_bug.cgi?id=77555

        Reviewed by James Robinson.

        * platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
        (WebCore::CCLayerTreeHost::setNeedsRedraw):
        * platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
        (WebCore::CCLayerTreeHostImpl::setFullRootLayerDamage):
        (WebCore):