@@ -1,3 +1,15 @@
+2012-02-09  Mark Rowe  <mrowe@apple.com>
+
+        REGRESSION (r104746): iframes load PDFs as media documents
+        <http://webkit.org/b/77079> / <rdar://problem/10757933>
+
+        Roll out r104746 since it completely broke support for loading PDF documents in subframes.
+
+        Reviewed by Adam Treat.
+
+        * dom/DOMImplementation.cpp:
+        (WebCore::DOMImplementation::createDocument):
+
 2012-02-09  Andrey Kosyakov  <caseq@chromium.org>
 
         Web Inspector: [refactoring] take _showShortEvents out of timeline calculator
